--- a/dad-jokes-project/src/App.css
+++ b/dad-jokes-project/src/App.css
@@ -1,31 +1,47 @@
-.App{
+.Dashboard {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  height: 90vh;
   font-family: "Rubik", sans-serif;
-  color: #78909c;
-  background: linear-gradient(
-    135deg,
-    rgba(179, 229, 252, 1) 0%,
-    rgba(179, 229, 252, 1) 50%,
-    rgba(240, 98, 146, 1) 50%,
-    rgba(240, 98, 146, 1) 100%
-  );
 }
 
-.navMenu-link {
-  margin: auto 20px;
-  list-style: none;
-  text-transform: uppercase;
+.Dash-main {
+  display: flex;
+  justify-content: center;
+  width: 80%;
+  height: 80%;
 }
 
-.navMenu-link:hover {
-  cursor: pointer;
+/* Purple back box */
+.Dash-sidebar { 
+  background-color: #9575cd;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 60%;
+  text-align: center;
+  box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.1),
+      inset 0 0 25px #7e57c2;
+  z-index: 2;
 }
-a {
-  text-decoration: none;
-  color: inherit;
+
+.Dash-title {
+    font-size: 8rem;
+    margin: 2rem;
+    color: white;
+    font-weight: 300;
+    letter-spacing: 0.6rem;
+}
+
+.Dash-title span {
+    font-weight: 700;
+    letter-spacing: 0;
+}
+
+.Dash-sidebar img {
+   width: 35%;
 }
 
 
