--- a/dad-jokes-project/src/index.css
+++ b/dad-jokes-project/src/index.css
@@ -38,3 +38,19 @@ textarea.materialize-textarea:focus:not([readonly]){
   border-color: #9575cd;
   box-shadow: none;
 }
+
+/* html, body {
+  height: 100%;
+  margin: 0;
+} */
+.wrapper {
+  min-height: 100%;
+
+  /* Equal to height of footer */
+  /* But also accounting for potential margin-bottom of last child */
+  margin-bottom: -50px;
+}
+.footer,
+.push {
+  height: 50px;
+}
