Update for Github

--- a/dad-jokes-project/src/index.css
+++ b/dad-jokes-project/src/index.css
@@ -54,3 +54,9 @@ textarea.materialize-textarea:focus:not([readonly]){
 .push {
   height: 50px;
 }
+
+@media (max-500px) {
+  body {
+    color: white;
+  }
+}
