--- a/dad-jokes-project/src/App.css
+++ b/dad-jokes-project/src/App.css
@@ -8,7 +8,7 @@ main {
   flex: 1 0 auto;
 }
 
-.Dashboard {
+/* .Dashboard {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -22,7 +22,7 @@ main {
   justify-content: center;
   width: 70%;
   height: 70%;
-}
+} */
 
 /* Purple back box */
 /* .Dash-sidebar { 
@@ -37,15 +37,15 @@ main {
       inset 0 0 25px #7e57c2;
   z-index: 2;
 } */
-.Dash-sidebar {
+/* .Dash-sidebar {
   display: grid;
   background-color: #9575cd;
   align-items: center;
   grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
 
-}
+} */
 
-.Dash-title {
+/* .Dash-title {
     display: flex;
     align-items: center;
     font-size: 8rem;
@@ -53,8 +53,10 @@ main {
     color: white;
     font-weight: 300;
     letter-spacing: 0.6rem;
-}
+} */
 
+
+/*
 .Dash-title span {
     font-weight: 700;
     letter-spacing: 0;
@@ -67,39 +69,5 @@ main {
 .brand-logo span{
     font-weight: 700;
     letter-spacing: 0;
-}
-
-/* @media screen and (min-width: 967px) and (max-width: 1127px) {
-    .Dashboard {
-    flex-basis: calc(100% / 3);
-    }
-    .Dashboard-main {
-      flex-basis: calc(100% / 3);
-    }
-    .Dash-sidebar {
-      flex-basis: calc(100% / 3);
-    }
-    .Dash-title {
-      flex-basis: calc(100% / 3);
-    }
-    
-}
-
-@media screen and (max-width: 967px) {
-    .Dash-title {
-    flex-basis: calc(50% / 2);
-  }
 } */
-
-/* @media (max-width: 790px){
-  .Dash-title{
-    width:100%;
-    float:inherit;
-  }
-  
-  } */
-
-
-
-
 
